# schismtracker

./: .clang-format  .gitignore  .gitmodules  .hgeol  .hgignore  .hgtags  .travis.yml  AGENDA  AGENTS.md  AUTHORS  AUTHORS.cvs  COMPILE-WIN32.txt  COPYING.libmodplug  ChangeLog  IDEA.keybindings  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.building  README.maint-notes  README.md  TODO  aclocal.m4  appveyor.yml  autogen.sh  build.sh  config.h.in  configure  configure.ac  configure.in  schismtracker.desktop
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: install.sh  run.sh
.github/workflows/: build.yml  build64.yml  llvm-mingw.yml  macos.yml  mingw.yml  mingw32.yml  os2.yml  osx.yml  osxppc.yml  pkgbuild.yml  ubuntu.yml  wii.yml  wiiu.yml  wiiu.yml~  xbox.yml
automated-testing/: entrypoint.c  harness.c  index.c  output.c  testresult.c
automated-testing/cases/: bshift.c
docs/: accessibility.md  building_for_web.md  building_for_web_ja.md  building_on_linux.md  building_on_osx.md  building_on_windows.md  configuration.md  shortcuts_ja.md  shortcuts_ja_audit.md
fmt/: 669.c  aiff.c  ams.c  au.c  avformat.c  brr.c  bzip2.c  compression.c  d00.c  dsm.c  dtm.c  edl.c  f2r.c  far.c  flac.c  generic.c  gstreamer.c  iff.c  imf.c  it.c  iti.c  its.c  its.cc  liq.c  macosxavf.m  macosxca.c  mdl.c  med.c  mf.c  mid.c  mid.cc  mmcmp.c  mod.c  mp3.c  mt2.c  mtm.c  mus.c  ntk.c  ogg.c  okt.c  (+21 more)
font/: cp866.fnt  default-upper-itf.fnt  extended-latin.fnt  greek.fnt  half-width.fnt  hiragana.fnt
helptext/: adlib-sample  copyright  global-keys  index  info-page  instrument-list  message-editor  midi-output  orderlist-pan  orderlist-vol  palettes  pattern-editor  sample-list  time-information
icons/: appIcon.icns
include/: acc.h  accessibility.h  atomic.h  automated-testing.h  bits.h  bshift.h  bswap.h  charset.h  clippy.h  cmixer.h  config-parser.h  config.h  controller.h  cpu.h  dialog.h  disko.h  diskwriter.h  dmoz.h  draw-char.h  event.h  events.h  fakemem.h  fft-vars.h  fmopl.h  fmopl2.h  fmopl3.h  fmt-types.h  fmt.h  fonts.h  frag-opt.h  headers.h  http.h  ieee-float.h  it.h  it_defs.h  keybinds.h  keyboard.h  loadso.h  log.h  lua-engine.h  (+49 more)
include/auto/: README  build-version.h  default-font.h  helpenum.h  helptext.h  logoit.h  logoschism.h  schismico.h  schismico_hires.h
include/backend/: audio.h  clippy.h  dmoz.h  events.h  init.h  mt.h  object.h  threads.h  timer.h  video.h
include/player/: cmixer.h  fmopl.h  precomp_lut.h  snd_fm.h  snd_gm.h  sndfile.h  tables.h
libs/: libSDL-1.2.0.dylib
lutgen/: Makefile  lut.c  precomp_lut.h
modplug/: Makefile  cmixer.c  cmixer.h  csndfile.c  fastmix.c  fastmix.cpp  fmopl.c  fmopl.h  fmpatches.c  it_defs.h  load_669.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_dmf.cpp  load_dsm.cpp  load_far.cpp  load_it.cpp  load_mdl.cpp  load_med.cpp  load_mid.cpp  load_mod.cpp  load_mt2.cpp  load_mtm.cpp  load_okt.cpp  load_psm.cpp  load_ptm.cpp  load_s3m.cpp  load_stm.cpp  load_ult.cpp  load_umx.cpp  load_wav.cpp  load_xm.cpp  mmcmp.c  snd_dsp.c  snd_dsp.cpp  snd_eq.c  snd_eq.cpp  snd_eq.h  snd_flt.c  (+20 more)
player/: csndfile.c  dsp.c  effects.c  equalizer.c  filters.c  fmopl.c  fmopl2.c  fmopl3.c  fmpatches.c  mixer.c  mixutil.c  opl-util.c  snd_fm.c  snd_gm.c  sndmix.c  tables.c
schism/: Makefile  accessibility.c  asprintf.c  atomic.c  audio_loadsave.c  audio_loadsave.cc  audio_playback.c  audio_playback.cc  bshift.c  bswap.c  charset.c  charset_data.c  charset_stdlib.c  charset_unicode.c  clippy.c  config-parser.c  config.c  controller.c  cpu.c  dialog.c  disko.c  disko_dialog.c  diskwriter.c  diskwriter.cc  diskwriter_dialog.c  dmoz.c  draw-char.c  draw-misc.c  draw-pixel.c  events.c  fakemem.c  features.c  float.c  fonts.c  frag-opt.c  helptext.c  http.c  ieee-float.c  inst_loader.c  isysev.c  (+75 more)
schism/auto/: schismico.c  schismico_hires.c
schism/fmt/: 669.c  aiff.c  ams.c  au.c  dtm.c  f2r.c  far.c  imf.c  it.c  iti.c  its.cc  liq.c  mdl.c  mid.cc  mod.c  mp3.c  mt2.c  mtm.c  ntk.c  ogg.c  (+12 more)
scripts/: README  bin2h.sh  build-auto.sh  build-font.sh  build-lua.sh  build-uni.sh  build-version.sh  build-web.sh  build.sh  ddraw.h  fink-macosx.sh  genhelp.pl  genhelp.py  genkeybinds.py  half2itf.py  itcfg.py  itf2half.py  itmidicfg.py  lutgen.c  mac-cc.sh  maint-all.sh  maint-changelog.sh  maint-clean.sh  maint-cvsexport.sh  maint-linux.sh  maint-macosx.sh  maint-release.sh  maint-tarball.sh  maint-upload.sh  maint-wikiver.pl  maint-win32-fast.sh  maint-win32.sh  palette.py  storlek-snapshot.sh  timestamp.py
src/: Makefile.am  Makefile.in  audio_loadsave.cc  audio_playback.cc  bin2h.c  config-parser.c  config.c  create_help.sh  dialog.c  dmoz.c  draw-char.c  draw-misc.c  draw-pixel.c  frag-opt.c  half-width.fnt  helptext.c  item-keyhandler.c  item.c  itf.c  keyboard.c  main.c  menu.c  mixer-alsa.c  mixer-oss.c  mixer.c  mplink.cc  page.c  page_blank.c  page_help.c  page_info.c  page_instruments.c  page_loadmodule.c  page_loadsample.c  page_log.c  page_message.c  page_midi.c  page_orderpan.c  page_palette.c  page_patedit.c  page_preferences.c  (+13 more)
src/fmt/: 669.c  Makefile.am  Makefile.in  aiff.c  ams.c  au.c  dtm.c  f2r.c  far.c  imf.c  it.c  its.c  its.cc  liq.c  mdl.c  mod.c  mp3.c  mt2.c  mtm.c  ntk.c  ogg.c  raw.c  rtm.c  s3m.c  sid.c  stm.c  title.c  ult.c  xm.c
src/helptext/: global-keys  instrument-list  message-editor  orderlist-pan  orderlist-vol  pattern-editor  sample-list
src/include/: _decl.h  config-parser.h  dmoz.h  draw-char.h  fmt.h  headers.h  it.h  mixer.h  mplink.h  page.h  palettes.h  pattern-view.h  sample-edit.h  slurp.h  song.h  title.h  util.h
src/libmodplug/: Makefile.am  Makefile.in  README  fastmix.cpp  it_defs.h  load_669.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_it.cpp  load_mdl.cpp  load_med.cpp  load_mod.cpp  load_mt2.cpp  load_s3m.cpp  load_stm.cpp  load_xm.cpp  snd_fx.cpp  sndfile.cpp  sndfile.h  sndmix.cpp  stdafx.h  tables.cpp
sys/: osdefs.c
test/: assert.c  entrypoint.c  format.c  harness.c  index.c  log.c  name.c  output.c  tempfile.c  testresult.c  vmem.c
(+179 files in other folders)
